--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -8,3 +8,4 @@ linter:
     prefer_constructors_over_static_methods: false
     avoid_positional_boolean_parameters: false
     document_ignores: false
+    lines_longer_than_80_chars: false
