--- a/playground/.gitignore
+++ b/playground/.gitignore
@@ -43,3 +43,9 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase hosting
+firebase.json
+.firebaserc
+/.firebase
+**firebase_options.dart
