--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,24 +24,24 @@ dev_dependencies:
 
 flutter:
   fonts:
-    - family: PlusJakartaSans
+    - family: Figtree
       fonts:
-        - asset: fonts/PlusJakartaSans-ExtraLight.ttf
+        - asset: fonts/Figtree-Light.ttf
           weight: 100
-        - asset: fonts/PlusJakartaSans-ExtraLight.ttf
+        - asset: fonts/Figtree-Light.ttf
           weight: 200
-        - asset: fonts/PlusJakartaSans-Light.ttf
+        - asset: fonts/Figtree-Light.ttf
           weight: 300
-        - asset: fonts/PlusJakartaSans-Regular.ttf
+        - asset: fonts/Figtree-Regular.ttf
           weight: 400
-        - asset: fonts/PlusJakartaSans-Medium.ttf
+        - asset: fonts/Figtree-Medium.ttf
           weight: 500
-        - asset: fonts/PlusJakartaSans-SemiBold.ttf
+        - asset: fonts/Figtree-SemiBold.ttf
           weight: 600
-        - asset: fonts/PlusJakartaSans-Bold.ttf
+        - asset: fonts/Figtree-Bold.ttf
           weight: 700
-        - asset: fonts/PlusJakartaSans-ExtraBold.ttf
+        - asset: fonts/Figtree-ExtraBold.ttf
           weight: 800
-        - asset: fonts/PlusJakartaSans-ExtraBold.ttf
+        - asset: fonts/Figtree-Black.ttf
           weight: 900
   uses-material-design: true
