--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   just_the_tooltip: ^0.0.12
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
